Feat: Rest of implementation (forgot to add)
