# backend/src/application/resources/progressResource.ts
@@ -1,5 +1,5 @@
 import * as deps from "./dependencies";
-import * as SubmissionServices from "../../core/services/progress";
+import * as ProgressServices from "../../core/services/progress";
 import * as ProgressSchemas from "../schemas/progressSchemas";
 
 /**
@@ -22,18 +22,20 @@ const extractors = {
     getAssignmentProgress: deps.createZodParamsExtractor(ProgressSchemas.getProgressSchema),
     getGroupProgress: deps.createZodParamsExtractor(ProgressSchemas.getProgressSchema),
     getUserAssignmentProgress: deps.createZodParamsExtractor(ProgressSchemas.getUserAssignmentProgressSchema),
+    getClassCompletion: deps.createZodParamsExtractor(ProgressSchemas.getProgressSchema),
 };
 
 /* ************* Controller ************* */
 
 export class ProgressController extends deps.Controller {
     constructor(
-        getUserProgress: SubmissionServices.GetUserProgress,
-        getAssignmentProgress: SubmissionServices.GetAssignmentProgress,
-        getGroupProgress: SubmissionServices.GetGroupProgress,
-        get: SubmissionServices.GetUserAssignmentProgress,
+        getUserProgress: ProgressServices.GetUserProgress,
+        getAssignmentProgress: ProgressServices.GetAssignmentProgress,
+        getGroupProgress: ProgressServices.GetGroupProgress,
+        get: ProgressServices.GetUserAssignmentProgress,
+        getClassCompletion: ProgressServices.GetClassCompletion,
     ) {
-        super({ getUserProgress, getAssignmentProgress, getGroupProgress, get });
+        super({ getUserProgress, getAssignmentProgress, getGroupProgress, get, getClassCompletion });
     }
 }
 
@@ -80,6 +82,15 @@ export function progressRoutes(
                 controller,
                 extractor: extractors.getUserAssignmentProgress,
                 handler: (req, data) => controller.getOne(req, data),
+                middleware,
+            },
+            {
+                app,
+                method: deps.HttpMethod.GET,
+                urlPattern: "/classes/:idParent/completion",
+                controller,
+                extractor: extractors.getClassCompletion,
+                handler: (req, data) => controller.getChildren(req, data, controller.services.getClassCompletion),
                 middleware,
             },
         ],
