# backend/src/config/controllers.ts
@@ -61,6 +61,7 @@ export const controllers = {
         services.progress.getAssignmentProgress,
         services.progress.getGroupProgress,
         services.progress.get,
+        services.progress.getClassCompletion,
     ),
     learningObject: new Resources.LearningObjectController(services.learningObject.get, services.learningObject.getAll),
     learningPath: new Resources.LearningPathController(services.learningPath.get, services.learningPath.getAll),
